[package]
name = "label_drawer"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22.1"
dirs-next = "2.0.0"
image = "0.25.6"
reqwest = { version = "0.12.23", features = ["blocking", "json"] }
rfd = "0.15.4"
rusttype = "0.9.3"
serde = "1.0.219"
serde_json = "1.0.143"
slint = "1.12.1"
ttf-parser = "0.25.1"

[build-dependencies]
slint-build = "1.8.0"
